test_cases/pass/p02.lxr
SCRIPT AREA
START SCRIPT
DECLARE INT r
r=2+3*4
PRINT: r
END SCRIPT
