test_cases/fail/f43.lxr
SCRIPT AREA
START SCRIPT
DECLARE CHAR c
DECLARE INT x
c='A'
x=c*2
END SCRIPT
